# enigma

./: .gitignore  CMakeLists.txt  LICENSE  README.md  save_version.sh
fen/: README.md  cpw.epd  en_passant.epd  engine.epd  mixed.epd  not_in_check.fen  single_check.epd
include/: bench.hpp  board.hpp  checkinfo.hpp  constants.hpp  debug.hpp  evaluate.hpp  move.hpp  move_gen.hpp  move_generator.hpp  move_selector.hpp  movegen.hpp  moveselector.hpp  perft.hpp  precompute.hpp  random.hpp  search.hpp  search_state.hpp  searchstate.hpp  state.hpp  transposition_table.hpp  types.hpp  utils.hpp
scripts/: run_match.py  save_version.py
src/: bench.cpp  board.cpp  evaluate.cpp  main.cpp  movegen.cpp  perft.cpp  precompute.cpp  search.cpp  test.cpp  uci.cpp  utils.cpp
versions/: v0_negamax_with_timed_iterative_search  v1_ab_pruning_with_faster_eval  v1_alpha_beta_pruning
